feat: :sparkles: add handlers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "gorm",
         "jwtauth",
         "mapstructure",
-        "stretchr"
+        "stretchr",
+        "webserver"
     ]
 }
